--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Student Subject Allocation System"
+    "# **AI-Powered Student Subject Allocation System: A Machine Learning Approach**\n",
+    "\n",
+    "This notebook presents the implementation of two machine learning models designed for automatically assigning students to advanced course combinations based on their academic performance and aspirations. \n",
+    "\n",
+    "- **Model 1**: A simple neural network without optimizations, serving as a baseline.\n",
+    "- **Model 2**: A neural network incorporating optimization techniques such as L1/L2 regularization and various optimizers (Adam, RMSProp).\n",
+    "  \n",
+    "The notebook also includes data preprocessing, feature engineering (for the custom `Adv_course_combination` feature), model training, and evaluation metrics like confusion matrix, precision, F1 score, and specificity.\n",
+    "\n",
+    "The goal is to demonstrate how optimizations improve model performance and generalization for this multi-class classification task.\n",
+    "\n",
+    "--- \n"
    ]
   },
   {
